--- a/src/components/auth/modal/modal_style.css
+++ b/src/components/auth/modal/modal_style.css
@@ -2,9 +2,20 @@
 .modal_cont {
   background-color: black;
   width: 500px;
-  height: 500px;
+  height: 470px;
   border-radius: 5px;
   padding: 15px;
+}
+
+.signup_cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.signup_h1_cont {
+  margin-bottom: 30px;
 }
 
 .signup_h1 {
@@ -15,14 +26,31 @@
 .signup_inp {
   border: none;
   background-color: black;
-  border: 1.2px solid rgb(202, 201, 201);
+  border: 2px solid rgb(202, 201, 201);
   border-radius: 3px;
   padding: 10px;
-  width: 200px;
+  width: 450px;
+  color: white;
+  font-size: 1.2rem;
 }
 
 .newerror {
   font-size: 12px;
   color: red;
   margin: 0;
+  margin-top: 4px;
+  margin-left: 2px;
+}
+
+.modalform_inputcont {
+  display: flex;
+  flex-direction: column;
+  font-size: 13px;
+  margin-bottom: 18px;
+}
+
+/* Snackbar */
+.modal_loaded {
+  color: #e79f4b;
+  font-size: 1.3rem;
 }
