--- a/src/components/main/createpost/createpost_style.css
+++ b/src/components/main/createpost/createpost_style.css
@@ -1,9 +1,5 @@
-.create_btn_container {
-  position: fixed;
-}
-
 .create_modal_conatiner {
-  position: absolute;
+  position: fixed;
   overflow: hidden;
   top: 0;
   right: 0;
@@ -13,6 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1000;
 }
 
 .create_paper {
@@ -31,6 +28,11 @@
   margin-top: 5px;
 }
 
+/* Post Heading */
+.create_btn_heading {
+  padding: 5px;
+}
+
 /* Upload Buttons */
 .create_upload_cont {
   display: flex;
@@ -39,7 +41,7 @@
   margin-bottom: 15px;
 }
 .craete_file_input {
-  margin-left: 37px;
+  margin-left: 35px;
 }
 .create_btn_upload {
   position: absolute;
