--- a/src/components/main/userdetails/userdetails_style.css
+++ b/src/components/main/userdetails/userdetails_style.css
@@ -3,17 +3,33 @@
   transform: translateY(80px);
   right: 0;
   width: 400px;
-  margin-right: 80px;
+  margin-right: 120px;
   min-height: 500px;
   max-height: fit-content;
   padding: 10px;
 }
-
-@media screen and (max-width: 1134px) {
+.userdetail_header {
+  border-bottom: solid 0.5px black;
+  padding: 3px;
+  margin-bottom: 5px;
+}
+.userdetail_user_cont {
+  background-color: rgba(19, 18, 18, 0.897);
+  color: white;
+  display: flex;
+  align-items: center;
+  padding: 3.9px;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  border-top: solid rgb(153, 109, 28) 0.4px;
+  box-shadow: 1px 2px 3.5px rgba(0, 0, 0, 0.75);
+}
+.userdetail_username {
+  margin-left: 10px;
+  font-size: 15px;
+}
+@media screen and (max-width: 1165px) {
   .userdetails_cont {
-    display: none;
-  }
-  .home_divider {
     display: none;
   }
 }
