--- a/src/components/profile/profile_style.css
+++ b/src/components/profile/profile_style.css
@@ -47,3 +47,21 @@
   display: flex;
   flex-direction: column;
 }
+
+/*Deletepost*/
+.delete_cont {
+  min-width: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.delete_post {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 50%;
+  padding: 8px;
+  background-color: rgba(190, 190, 190, 0.644);
+  margin-bottom: 10px;
+  border-radius: 3px;
+}
